# get-sorty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launcher.cpp  main.cpp  vcpkg.json
.cache/clangd/index/: array.hpp.E44C77B27CED8A1A.idx  at_path.hpp.7B109E4BB1937EC5.idx  cli.cpp.209A3BFDCF91485E.idx  command.h.4465E851A139E183.idx  copy_command.h.BE54490385A8B520.idx  date_time.hpp.0E252355116F8AD8.idx  directory_monitor.cpp.171FF3052E11E954.idx  directory_monitor.cpp.DE25371FC114DB6F.idx  directory_monitor.h.40D3F5AAD3BEF506.idx  directory_monitor.h.674373D60B2C9558.idx  directory_monitor.h.898810EFEAEB0B6C.idx  file_lock.cpp.08F485AAFAC07CAA.idx  file_lock.cpp.CF6BA1DB48A0BF23.idx  file_lock.h.CB8BE9ACE3CA14C7.idx  formatter.hpp.225A99C0F958281E.idx  forward_declarations.hpp.634671D308F0AA58.idx  header_end.hpp.9C6D34FB8F5BDEEF.idx  header_start.hpp.03B6EEB2E3CFE1BE.idx  json_formatter.hpp.B2AE2925692F0001.idx  key.hpp.AB55856FD1EFAB70.idx  main.cpp.69BFB7690344907E.idx  main.cpp.D6230A89F3CFDA5D.idx  make_node.hpp.E25DD203FADFA175.idx  move_file.cpp.3C811A70CEDC34CF.idx  move_file.cpp.9AEDBC43061FCDFE.idx  move_file.h.D946A21DE3B9355D.idx  node.hpp.392FED897B961E8B.idx  node_view.hpp.E060E8F0949894E0.idx  parse_error.hpp.2989910EBE2E49CE.idx  parse_result.hpp.3CA178025428C4B0.idx  parser.hpp.D83F002CE54B1C73.idx  path.hpp.D89226B35D6C284B.idx  preprocessor.hpp.3CDEC4018ED28C1B.idx  print_to_stream.hpp.D33AD126CED2045F.idx  process_new_file.cpp.0569723A3F44EA7A.idx  process_new_file.cpp.3A6AC8DC4F86E733.idx  process_new_file.h.5E0D6D8A3A1B5BA1.idx  service.cpp.209E13B9783BA638.idx  service.cpp.842B81C9FDDF7E13.idx  source_region.hpp.F004C9ECD5ED4401.idx  (+19 more)
include/infrastructure/: directory_monitor.h
interface/: CMakeLists.txt
interface/src/: cli.cpp  menu_template.cpp
service/: CMakeLists.txt
service/include/application/: edit_directories.h
service/include/config/: user_config.h
service/include/domain/: command.h  copy_command.h  file_lock.h  process_new_file.h
service/include/infrastructure/: directory_monitor.h
service/src/: main  service.cpp
service/src/application/: edit_directories.cpp
service/src/config/: user_config.cpp
service/src/domain/: file_lock.cpp  move_file.cpp  process_new_file.cpp
service/src/infrastructure/: directory_monitor.cpp
service/test/testdir1/: ztest.txt
src/: main.cpp
src/infrastructure/: directory_monitor.cpp
